# paru

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  PKGBUILD  README.md  changes  dist  help  paru.conf  pot  yay.conf
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  issue.md
.github/workflows/: build.yml  mo.yml  paru.yml  rust.yml
completions/: bash  fish  zsh
man/: paru.8  paru.conf.5
pkgbuild/: PKGBUILD
po/: ca.po  cs.po  de.po  de_DE.po  es.po  fi.po  fr.po  hi.po  hr.po  hr.pot  hu.mo  hu.po  it.po  ja.po  ko.po  nl.po  paru.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
scripts/: dist  mkmo  mkpot  updpo
src/: args.rs  auth.rs  base.rs  chroot.rs  clean.rs  command_line.rs  completion.rs  config.rs  devel.rs  download.rs  exec.rs  fmt.rs  help.rs  info.rs  install.rs  keys.rs  lib.rs  main.rs  mock.rs  news.rs  order.rs  pkgbuild.rs  query.rs  remove.rs  repo.rs  resolver.rs  search.rs  stats.rs  sync.rs  timing.rs  upgrade.rs  util.rs
src/util/: unneeded_pkgs.rs
testdata/: devel.toml  makepkg.conf  pacman  pacman.conf  paru.conf
testdata/clone/auracle-git/: .SRCINFO  PKGBUILD  auracle-git-r366.8739929-1-x86_64.pkg.tar.xz
testdata/clone/devel/: .SRCINFO  PKGBUILD
testdata/clone/pacaur/: .SRCINFO  PKGBUILD  pacaur-4.8.6-1-any.pkg.tar.xz
testdata/clone/pkg/: .SRCINFO  PKGBUILD  pkg-1-1-any.pkg.tar.xz
testdata/clone/polybar/: .SRCINFO  PKGBUILD  polybar-3.5.6-1-x86_64.pkg.tar.xz
testdata/db/local/acl-2.3.1-1/: desc
testdata/db/local/alsa-lib-1.2.4-3/: desc  files  mtree
testdata/db/local/alsa-topology-conf-1.2.4-2/: desc  files  mtree
testdata/db/local/alsa-ucm-conf-1.2.4-2/: desc  files  mtree
testdata/db/local/archlinux-keyring-20210110-1/: desc  install
testdata/db/local/argon2-20190702-3/: desc
testdata/db/local/attr-2.5.1-1/: desc
testdata/db/local/audit-3.0.1-1/: desc
testdata/db/local/base-2-2/: desc
testdata/db/local/bash-5.1.004-1/: desc
testdata/db/local/bzip2-1.0.8-4/: desc
testdata/db/local/ca-certificates-20181109-4/: desc
testdata/db/local/ca-certificates-mozilla-3.64-1/: desc
testdata/db/local/ca-certificates-utils-20181109-4/: desc
testdata/db/local/cairo-1.17.4-5/: desc  files  mtree
testdata/db/local/coreutils-8.32-1/: desc
testdata/db/local/cryptsetup-2.3.5-4/: desc
testdata/db/local/curl-7.76.1-1/: desc
testdata/db/local/dbus-1.12.20-1/: desc
testdata/db/local/devel-1-1/: desc  mtree
testdata/db/local/device-mapper-2.03.11-5/: desc
testdata/db/local/e2fsprogs-1.46.2-1/: desc
testdata/db/local/expat-2.3.0-1/: desc
testdata/db/local/file-5.40-2/: desc
testdata/db/local/filesystem-2021.01.19-1/: desc
testdata/db/local/findutils-4.8.0-1/: desc
testdata/db/local/flac-1.3.3-2/: desc  files  mtree
testdata/db/local/fontconfig-2:2.13.93-4/: desc  files  install  mtree
testdata/db/local/freetype2-2.10.4-1/: desc  files  install  mtree
testdata/db/local/gawk-5.1.0-1/: desc
testdata/db/local/gcc-libs-10.2.0-6/: desc
testdata/db/local/gettext-0.21-1/: desc
testdata/db/local/glib2-2.68.1-1/: desc
testdata/db/local/glibc-2.33-4/: desc  install
testdata/db/local/gmp-6.2.1-1/: desc
testdata/db/local/gnupg-2.2.27-1/: desc  install
testdata/db/local/gnutls-3.7.1-1/: desc
testdata/db/local/gpgme-1.15.1-1/: desc
testdata/db/local/graphite-1:1.3.14-1/: desc  files  mtree
testdata/db/local/grep-3.6-1/: desc
testdata/db/local/gzip-1.10-3/: desc
testdata/db/local/harfbuzz-2.8.0-3/: desc  files  mtree
testdata/db/local/hwids-20201207-1/: desc
testdata/db/local/iana-etc-20210202-1/: desc
testdata/db/local/icu-69.1-1/: desc
testdata/db/local/iproute2-5.12.0-1/: desc
testdata/db/local/iptables-1:1.8.7-1/: desc
testdata/db/local/iputils-20210202-1/: desc
testdata/db/local/json-c-0.15-1/: desc
testdata/db/local/jsoncpp-1.9.4-1/: desc  files  mtree
testdata/db/local/kbd-2.4.0-2/: desc
testdata/db/local/keyutils-1.6.3-1/: desc
testdata/db/local/kmod-28-1/: desc
testdata/db/local/krb5-1.19.1-1/: desc
testdata/db/local/less-1:581.2-1/: desc
testdata/db/local/libarchive-3.5.1-1/: desc
testdata/db/local/libassuan-2.5.5-1/: desc
testdata/db/local/libasyncns-0.8+3+g68cd5af-3/: desc  files  mtree
testdata/db/local/libcap-2.49-1/: desc
testdata/db/local/libcap-ng-0.8.2-1/: desc
testdata/db/local/libcroco-0.6.13-2/: desc
testdata/db/local/libelf-0.183-3/: desc
testdata/db/local/libffi-3.3-4/: desc
testdata/db/local/libgcrypt-1.9.3-1/: desc
testdata/db/local/libgpg-error-1.42-1/: desc
testdata/db/local/libice-1.0.10-3/: desc  files  mtree
testdata/db/local/libidn2-2.3.0-1/: desc
testdata/db/local/libksba-1.4.0-2/: desc
testdata/db/local/libldap-2.4.58-1/: desc
testdata/db/local/libmnl-1.0.4-3/: desc
testdata/db/local/libmpdclient-2.19-3/: desc  files  mtree
testdata/db/local/libnetfilter_conntrack-1.0.8-1/: desc
testdata/db/local/libnfnetlink-1.0.1-4/: desc
testdata/db/local/libnftnl-1.1.9-1/: desc
testdata/db/local/libnghttp2-1.43.0-1/: desc
testdata/db/local/libnl-3.5.0-2/: desc
testdata/db/local/libogg-1.3.4-2/: desc  files  mtree
testdata/db/local/libp11-kit-0.23.22-1/: desc
testdata/db/local/libpcap-1.10.0-1/: desc
testdata/db/local/libpng-1.6.37-3/: desc  files  mtree
testdata/db/local/libpsl-0.21.1-1/: desc
testdata/db/local/libpulse-14.2-3/: desc  files  mtree
testdata/db/local/libsasl-2.1.27-3/: desc
testdata/db/local/libseccomp-2.5.1-2/: desc
testdata/db/local/libsecret-0.20.4-1/: desc
testdata/db/local/libsm-1.2.3-2/: desc  files  mtree
testdata/db/sync/: core.db  extra.db
testdata/git-repo/: config  packed-refs
testdata/pkgbuild-repo/a/: .SRCINFO  PKGBUILD
testdata/pkgbuild-repo/b/: .SRCINFO  PKGBUILD
testdata/pkgbuild-repo/c/: .SRCINFO  PKGBUILD
testdata/repo/: polybar-1.0.0-1-x86_64.pkg.tar.zst  repo.db
tests/: common.rs  paru.rs  paru_combined.rs  pkgbuild.rs
tests/common/: mod.rs  tests.rs
(+108 files in other folders)
