[package]
name = "paru"
version = "2.0.4"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2021"

description = "Feature packed AUR helper"
homepage = "https://github.com/Morganamilo/paru"
repository = "https://github.com/Morganamilo/paru"
documentation = "https://docs.rs/paru"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman", "aur"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]


[dependencies]
alpm = "4.0.1"
alpm-utils = "4.0.1"
aur-depends = "4.0.1"
aur-fetch = "0.11.3"
cini = "1.0.0"
pacmanconf = "3.0.0"
raur = "7.0.0"
srcinfo = "1.2.0"


ansi_term = "0.12.1"
anyhow = { version = "1.0.93", features = ["backtrace"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dirs = "5.0.1"
futures = "0.3.31"
globset = "0.4.15"
htmlescape = "0.3.1"
indicatif = "0.17.9"
scraper = "0.21.0"
nix = { version = "0.28.0", features = ["fs", "user"] }
reqwest = { version = "0.11.27", features = ["gzip", "socks"] }
rss = { version = "2.0.9", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
smart-default = "0.7.1"
tempfile = "3.14.0"
terminal_size = "0.3.0"
tokio = { version = "1.41.1", features = [
    "process",
    "macros",
    "rt-multi-thread",
] }
url = "2.5.3"
env_logger = "0.11.5"
log = "0.4.22"
async-trait = { version = "0.1.83", optional = true }
tr = "0.1.10"
unicode-width = "0.2.0"
regex = "1.11.1"
signal-hook = "0.3.17"
once_cell = "1.20.2"
bitflags = "2.6.0"
toml = { version = "0.8.19", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
lto = true

[features]
git = ["alpm/git", "alpm-utils/git", "aur-depends/git"]
backtrace = []
generate = ["alpm/generate"]
static = ["alpm/static"]
mock = ["async-trait"]
mock_chroot = ["mock"]
#default = ["git", "generate"]

[patch.crates-io]
#alpm = { path = "../alpm.rs/alpm" }
#alpm-utils = { path = "../alpm.rs/alpm-utils" }
#aur-depends = { path = "../aur-depends" }
#aur-fetch = { path = "../aur-fetch" }
