[package]
name = "paru"
version = "2.1.0"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2021"

description = "Feature packed AUR helper"
homepage = "https://github.com/Morganamilo/paru"
repository = "https://github.com/Morganamilo/paru"
documentation = "https://docs.rs/paru"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman", "aur"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
rust-version = "1.80"


[dependencies]
alpm = "4.0.3"
alpm-utils = "4.0.1"
aur-depends = "4.0.3"
aur-fetch = "0.11.3"
cini = "1.0.0"
pacmanconf = "3.0.0"
raur = "7.0.0"
srcinfo = "1.3.1"


ansiterm = "0.12.2"
anyhow = { version = "1.0.98", features = ["backtrace"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
dirs = "6.0.0"
futures = "0.3.31"
globset = "0.4.16"
htmlescape = "0.3.1"
indicatif = "0.18.0"
scraper = "0.23.1"
nix = { version = "0.30.1", features = ["fs", "user"] }
reqwest = { version = "0.11.0", features = ["gzip", "socks"] }
rss = { version = "2.0.12", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smart-default = "0.7.1"
tempfile = "3.20.0"
terminal_size = "0.4.2"
tokio = { version = "1.46.1", features = [
    "process",
    "macros",
    "rt-multi-thread",
] }
url = "2.5.4"
env_logger = "0.11.8"
log = "0.4.27"
async-trait = { version = "0.1.88", optional = true }
tr = "0.1.10"
unicode-width = "0.2.1"
regex = "1.11.1"
signal-hook = "0.3.18"
bitflags = "2.9.1"
toml = { version = "0.8.23", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
lto = true

[features]
git = ["alpm/git", "alpm-utils/git", "aur-depends/git"]
backtrace = []
generate = ["alpm/generate"]
static = ["alpm/static"]
mock = ["async-trait"]
mock_chroot = ["mock"]
#default = ["git", "generate"]

[patch.crates-io]
#alpm = { path = "../alpm.rs/alpm" }
#alpm-utils = { path = "../alpm.rs/alpm-utils" }
#aur-depends = { path = "../aur-depends" }
#aur-fetch = { path = "../aur-fetch" }
