[package]
name = "paru"
version = "2.1.0"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2021"

description = "Feature packed AUR helper"
homepage = "https://github.com/Morganamilo/paru"
repository = "https://github.com/Morganamilo/paru"
documentation = "https://docs.rs/paru"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman", "aur"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
rust-version = "1.87"


[dependencies]
alpm = "5.0.0"
alpm-utils = "5.0.0"
aur-depends = "5.0.0"
aur-fetch = "0.11.3"
cini = "1.0.0"
pacmanconf = "3.1.0"
raur = "7.0.0"
srcinfo = "2.1.0"


ansiterm = "0.12.2"
anyhow = { version = "1.0.100", features = ["backtrace"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dirs = "6.0.0"
futures = "0.3.31"
globset = "0.4.18"
htmlescape = "0.3.1"
indicatif = "0.18.3"
scraper = "0.25.0"
nix = { version = "0.30.1", features = ["fs", "user"] }
reqwest = { version = "0.11.0", features = ["gzip", "socks"] }
rss = { version = "2.0.12", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
smart-default = "0.7.1"
tempfile = "3.24.0"
terminal_size = "0.4.3"
tokio = { version = "1.48.0", features = [
    "process",
    "macros",
    "rt-multi-thread",
] }
url = "2.5.7"
env_logger = "0.11.8"
log = "0.4.29"
async-trait = { version = "0.1.89", optional = true }
tr = "0.1.10"
unicode-width = "0.2.2"
regex = "1.12.2"
signal-hook = "0.4.1"
bitflags = "2.10.0"
toml = { version = "0.9.10", features = ["preserve_order"] }
flate2 = "1.1.5"

[profile.release]
codegen-units = 1
lto = true

[features]
git = ["alpm/git", "alpm-utils/git", "aur-depends/git"]
backtrace = []
generate = ["alpm/generate"]
static = ["alpm/static"]
mock = ["async-trait"]
mock_chroot = ["mock"]
#default = ["git", "generate"]

[patch.crates-io]
#alpm = { path = "../alpm.rs/alpm" }
#alpm-utils = { path = "../alpm.rs/alpm-utils" }
#aur-depends = { path = "../aur-depends" }
#srcinfo = { path = "../srcinfo.rs" }
#aur-fetch = { path = "../aur-fetch" }
